# opensquat

./: .coverage  .gitignore  .travis.yml  .~c9_invoke_oxHzFE.py  CHANGELOG  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_ACTIONS_SETUP.md  README.md  arg_parser.py  ct.py  domain-names-2.txt  domain-names.txt  generic.txt  homograph.py  ig.py  ig2.py  input.txt  keywords.txt  levenshtein.py  main.py  opensquat.conf  opensquat.db  opensquat.py  output.json  output.py  parser.py  phishing.db  pyproject.toml  requirements-dev.txt  requirements.txt  results.txt  run.py  validations.py  vt_key.txt
.c9/: out_of_memory  project.settings
.c9/metadata/environment/: README.md  domain-names.txt  keywords.txt  opensquat.py
.c9/metadata/environment/2020/05/: 2020-05-04.json
.github/: FUNDING.yml
.github/workflows/: opensquat-scan.yml  opensquat-simple.yml  publish.yml
2020/05/: 2020-05-04.json
opensquat/: __init__.py  app.py  arg.py  arg_parser.py  banner.py  check_update.py  cli.py  config.py  ct.py  dns_resolvers.py  dns_validator.py  doh_resolver.py  email_checks.py  feed_manager.py  file_input.py  homograph.py  instagram.py  messages.py  open_ports.py  output.py  phishing.py  port_check.py  query.py  squatting_detector.py  validations.py  vt.py
tests/: test_ct.py  test_validations.py
